fix mobile spacing

--- a/web/css/page.css
+++ b/web/css/page.css
@@ -123,7 +123,7 @@
 .bandblock .band {
 	width: 100%;
 	box-sizing: border-box;
-	margin: 10px;
+	margin: 10px 0;
 	background: var(--color-white);
 	display: flex;
 	flex-direction: column;
@@ -132,6 +132,7 @@
 }
 @media (min-width: 768px) {
 	.bandblock .band {
+		margin: 10px;
 		width: 24rem;
 	}
 }
